fixed get to post

--- a/src/views/review.hbs
+++ b/src/views/review.hbs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Leave a Review</h1>
-    <form action="/review-confirmation" method="GET">
+    <form action="/review-confirmation" method="POST">
       <label for="name">Your Name</label>
       <input type="text" name="name" id="name" />
       <label for="comment">Comment</label>
